--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-router-dom": "^5.2.0",
     "react-window": "^1.8.6",
     "style-components": "^0.1.0",
-    "webpack-cli": "^4.9.1"
+    "suny-form": "^1.0.0",
+    "webpack-cli": "^4.9.1",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
